// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/color-picker/demo/allowClear.tsx correctly 1`] = `
<div
  class="ant-color-picker-placeholder"
  format="hex"
>
  <div
    class="ant-color-picker-placeholder-container"
  >
    <div
      class="ant-color-picker-placeholder-display"
    />
    <div
      class="ant-color-picker-placeholder-layer"
      style="background-color:rgb(22, 119, 255)"
    />
  </div>
</div>
`;

exports[`renders components/color-picker/demo/base.tsx correctly 1`] = `
<div
  class="ant-color-picker-placeholder"
  format="hex"
>
  <div
    class="ant-color-picker-placeholder-container"
  >
    <div
      class="ant-color-picker-placeholder-display"
    />
    <div
      class="ant-color-picker-placeholder-layer"
      style="background-color:rgb(22, 119, 255)"
    />
  </div>
</div>
`;

exports[`renders components/color-picker/demo/disabled.tsx correctly 1`] = `
<div
  class="ant-color-picker-placeholder ant-color-picker-placeholder-disabled"
  format="hex"
>
  <div
    class="ant-color-picker-placeholder-container"
  >
    <div
      class="ant-color-picker-placeholder-display"
    />
    <div
      class="ant-color-picker-placeholder-layer"
      style="background-color:rgb(22, 119, 255)"
    />
  </div>
</div>
`;

exports[`renders components/color-picker/demo/format.tsx correctly 1`] = `
<div
  class="ant-space ant-space-vertical"
  style="display:flex"
>
  <div
    class="ant-space-item"
    style="margin-bottom:16px"
  >
    <div
      class="ant-row ant-row-middle"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right:8px"
        >
          <div
            class="ant-col"
          >
            <div
              class="ant-color-picker-placeholder"
              format="hex"
            >
              <div
                class="ant-color-picker-placeholder-container"
              >
                <div
                  class="ant-color-picker-placeholder-display"
                />
                <div
                  class="ant-color-picker-placeholder-layer"
                  style="background-color:rgb(22, 119, 255)"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="ant-col"
          >
            HEX:
            <span>
              #1677ff
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:16px"
  >
    <div
      class="ant-row ant-row-middle"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right:8px"
        >
          <div
            class="ant-col"
          >
            <div
              class="ant-color-picker-placeholder"
              format="hsb"
            >
              <div
                class="ant-color-picker-placeholder-container"
              >
                <div
                  class="ant-color-picker-placeholder-display"
                />
                <div
                  class="ant-color-picker-placeholder-layer"
                  style="background-color:rgb(22, 119, 255)"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="ant-col"
          >
            HSB:
            <span>
              #1677ff
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-row ant-row-middle"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right:8px"
        >
          <div
            class="ant-col"
          >
            <div
              class="ant-color-picker-placeholder"
              format="rgb"
            >
              <div
                class="ant-color-picker-placeholder-container"
              >
                <div
                  class="ant-color-picker-placeholder-display"
                />
                <div
                  class="ant-color-picker-placeholder-layer"
                  style="background-color:rgb(22, 119, 255)"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="ant-col"
          >
            RGB:
            <span>
              #1677ff
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/color-picker/demo/presets.tsx correctly 1`] = `
<div
  class="ant-color-picker-placeholder"
  format="hex"
  presets="[object Object],[object Object]"
>
  <div
    class="ant-color-picker-placeholder-container"
  >
    <div
      class="ant-color-picker-placeholder-display"
    />
    <div
      class="ant-color-picker-placeholder-layer"
      style="background-color:rgb(22, 119, 255)"
    />
  </div>
</div>
`;

exports[`renders components/color-picker/demo/trigger.tsx correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center"
>
  <div
    class="ant-space-item"
    style="margin-right:8px"
  >
    <div
      style="width:20px;height:20px;border-radius:4px;background:#1677ff"
    />
  </div>
  <div
    class="ant-space-item"
  >
    <span>
      #1677ff
    </span>
  </div>
</div>
`;
